<resources>
    <string name="app_name">PocketScouts</string>
    <string name="sign_up">Sign Up with Email</string>
    <string name="journey">Find your flock!</string>
    <string name="continue_google">Continue with Google</string>
    <string name="email_signup">Log in with Email</string>
    <string name="already_account">Need an account?</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome Back, Log In!</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="remember_me">Remember me</string>
    <string name="birthday">Birthday</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string-array name="gender_list">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- navbar -->
    <string name="nav_events_label">My Events</string>
    <string name="nav_explore_label">Explore</string>
    <string name="nav_profile_label">Profile</string>
    <string name="nav_auth_label">Auth</string>
    <string name="location_search_hint">Where to?</string>


    <!--    User Dashboard-->
    <string name="dashboard_host_rating_label">Host Rating</string>

    <string name="dashboard_events_attended_month">0</string>
    <string name="dashboard_events_attended_total">0</string>
    <string name="dashboard_events_attended_total_label">Events You Attended</string>

    <string name="dashboard_my_events_btn">My Events</string>
    <string name="dashboard_host_events_btn">Host an Event</string>

    <string name="dashboard_edit_info">Edit Information</string>
    <string name="dashboard_verify_id_false">Your ID has not been verified.</string>
    <string name="dashboard_verify_id_true">Your ID has already been verified.</string>
    <string name="dashboard_edit_name">Edit Name</string>
    <string name="dashboard_edit_name_hint">Enter new name…</string>
    <string name="dashboard_edit_lname">Edit Last Name</string>
    <string name="dashboard_edit_lname_hint">Enter new last name…</string>
    <string name="dashboard_edit_birthday">Edit Birthday</string>
    <string name="dashboard_edit_gender">Edit Gender</string>

    <string name="dashboard_save_changes_btn">Save Changes</string>
    <string name="dashboard_signout_btn">Sign Out</string>

    <!-- weather -->

    <string name="weather_placeholder">"Fetching local temperature..."</string>
    <string name="weather_error">"Error fetching temperature."</string>
    <string name="dashboard_upload_id_btn">Verify Your ID</string>

    <!--    Create Event-->
    <string name="create_event_title">Create an Event</string>

    <string name="create_event_title_label">Event Title</string>
    <string name="create_event_title_hint">Enter event title…</string>

    <string name="create_event_address_label">Event Location</string>
    <string name="create_event_address_hint">Enter a location…</string>
    <string name="create_event_address_btn">Find</string>

    <string name="create_event_date_label">Event Date</string>

    <string name="create_event_attendees_label">Number of Attendees</string>

    <string name="create_event_description_label">Event Description</string>
    <string name="create_event_description_hint">Enter event description…</string>

    <string name="create_event_icon_label">Choose An Icon</string>
    <string-array name="icon_list">
        <item>Biking</item>
        <item>Coffee</item>
        <item>Food</item>
        <item>Nature</item>
        <item>Party</item>
        <item>Running</item>
        <item>Sparkles</item>
    </string-array>

    <string name="create_event_create_btn">Create Event</string>

    <!--    Create Event: Map Fragment-->
    <string name="create_event_map_placeholder">PLACEHOLDER FOR GOOGLE MAPS</string>

    <string name="title_event">Your Events</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="web_client_id">74407383316-s9qqbmlc623hfsgva8ts63u9gd9rblu1.apps.googleusercontent.com</string>
    <string name="isVerifiedText">You have already verified your id.</string>

    <string name="no_events">There are no events in the area. Check again later or host one!</string>

    <!--    Event Dialogue  -->
    <string name="user_host_of_event">You\'re hosting!</string>
    <string name="user_rsvp_event">You\'re attending!</string>
    <string name="old_event">Event ended</string>
    <string name="event_limit_reached">Event limit reached!</string>
    <string name="date">Date</string>
    <string name="event_dialogue_limit">Limit</string>
    <string name="event_dialogue_description">Details</string>
    <string name="event_dialogue_host">Host</string>
    <string name="weather_icon">Weather Icon</string>
    <string name="share">Share Event</string>
    <string name="rating">Rating</string>
</resources>
