<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_events"
        android:enabled="true"
        android:icon="@drawable/ic_event"
        android:title="@string/nav_events_label"
        />

    <item
        android:id="@+id/nav_explore"
        android:enabled="true"
        android:icon="@drawable/ic_explore"
        android:title="@string/nav_explore_label"
        />

    <item
        android:id="@+id/nav_profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile_label"
        />
    <item
        android:id="@+id/nav_auth"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_auth_label"
        android:visible="false"
        />
</menu>