<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:rowCount="2"
    tools:context=".AuthLoginFragment">

    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_rowWeight="1"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="40sp"
        android:textColor="@color/orange_500"
        android:paddingHorizontal="40dp"
        android:text="@string/welcome_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_rowWeight="2"
        android:padding="30dp"

        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"

            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:checked="true"
                android:color="@color/purple_700"
                app:trackTint="@color/red_light"
                android:layout_gravity="start"
                android:text="@string/remember_me"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textAllCaps="false"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                app:strokeColor="#777"
                android:gravity="end|center"
                app:strokeWidth="0dp"
                android:textColor="#777"
                />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAllCaps="false"
            android:layout_marginTop="30dp"
            android:paddingHorizontal="80dp"
            android:textColor="#fff"
            android:backgroundTint="@color/orange_500"
            android:layout_gravity="center"
            />
    </LinearLayout>
</GridLayout>